logs/dag_id=dag_sql/run_id=scheduled__2023-03-08T173000+0000/task_id=insere_dados_tb_data_engineering/attempt=1.log
[2023-03-08T19:44:25.813+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: dag_sql.insere_dados_tb_data_engineering scheduled__2023-03-08T17:30:00+00:00 [queued]>
[2023-03-08T19:44:25.830+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: dag_sql.insere_dados_tb_data_engineering scheduled__2023-03-08T17:30:00+00:00 [queued]>
[2023-03-08T19:44:25.831+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2023-03-08T19:44:25.832+0000] {taskinstance.py:1280} INFO - Starting attempt 1 of 1
[2023-03-08T19:44:25.833+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2023-03-08T19:44:25.854+0000] {taskinstance.py:1300} INFO - Executing <Task(PostgresOperator): insere_dados_tb_data_engineering> on 2023-03-08 17:30:00+00:00
[2023-03-08T19:44:25.860+0000] {standard_task_runner.py:55} INFO - Started process 8082 to run task
[2023-03-08T19:44:25.864+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_sql', 'insere_dados_tb_data_engineering', 'scheduled__2023-03-08T17:30:00+00:00', '--job-id', '94', '--raw', '--subdir', 'DAGS_FOLDER/dag_sql.py', '--cfg-path', '/tmp/tmpqc27dv5y']
[2023-03-08T19:44:25.864+0000] {standard_task_runner.py:83} INFO - Job 94: Subtask insere_dados_tb_data_engineering
[2023-03-08T19:44:25.938+0000] {task_command.py:388} INFO - Running <TaskInstance: dag_sql.insere_dados_tb_data_engineering scheduled__2023-03-08T17:30:00+00:00 [running]> on host 214d78e4ce30
[2023-03-08T19:44:26.041+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=dag_sql
AIRFLOW_CTX_TASK_ID=insere_dados_tb_data_engineering
AIRFLOW_CTX_EXECUTION_DATE=2023-03-08T17:30:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-03-08T17:30:00+00:00
[2023-03-08T19:44:26.043+0000] {sql.py:254} INFO - Executing: insert into tb_cliente(name, dt)
values('Junior Lafuente', 'DATA ENGINERIING', 'PLENO' CURRENT_DATE),
      ('Guilherme Delmondes', 'DATA ENGINERIING', 'SPEC' CURRENT_DATE),
      ('Bruno Rodrigues', 'DATA ENGINERIING', 'SENIOR' CURRENT_DATE),
      ('Rafael Miranda', 'DATA ENGINERIING', 'SPEC' CURRENT_DATE),
      ('Diogo brido nilo', 'DATA ENGINERIING', 'PLENO' CURRENT_DATE);
        
[2023-03-08T19:44:26.059+0000] {base.py:73} INFO - Using connection ID 'postgres-***' for task execution.
[2023-03-08T19:44:26.373+0000] {base.py:73} INFO - Using connection ID 'postgres-***' for task execution.
[2023-03-08T19:44:26.470+0000] {sql.py:375} INFO - Running statement: insert into tb_cliente(name, dt)
values('Junior Lafuente', 'DATA ENGINERIING', 'PLENO' CURRENT_DATE),
      ('Guilherme Delmondes', 'DATA ENGINERIING', 'SPEC' CURRENT_DATE),
      ('Bruno Rodrigues', 'DATA ENGINERIING', 'SENIOR' CURRENT_DATE),
      ('Rafael Miranda', 'DATA ENGINERIING', 'SPEC' CURRENT_DATE),
      ('Diogo brido nilo', 'DATA ENGINERIING', 'PLENO' CURRENT_DATE);
        , parameters: None
[2023-03-08T19:44:26.542+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "CURRENT_DATE"
LINE 2: ...es('Junior Lafuente', 'DATA ENGINERIING', 'PLENO' CURRENT_DA...
                                                             ^

[2023-03-08T19:44:26.559+0000] {taskinstance.py:1323} INFO - Marking task as FAILED. dag_id=dag_sql, task_id=insere_dados_tb_data_engineering, execution_date=20230308T173000, start_date=20230308T194425, end_date=20230308T194426
[2023-03-08T19:44:26.581+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 94 for task insere_dados_tb_data_engineering (syntax error at or near "CURRENT_DATE"
LINE 2: ...es('Junior Lafuente', 'DATA ENGINERIING', 'PLENO' CURRENT_DA...
                                                             ^
; 8082)
[2023-03-08T19:44:26.618+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2023-03-08T19:44:26.651+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
